--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
   noff = merge --no-ff
   l = "!source ~/.githelpers && pretty_git_log"
   la = !git l --all
+  lod = log --oneline --decorate
   div = divergence
   gn = goodness
   gnc = goodness --cached
