awesome git log with `git lg`

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,3 +31,4 @@
   b = branch
   ds = diff --stat=160,120
   dh1 = diff HEAD~1
+  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
