--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
   r = !git l -20
   ra = !git r --all
   ff = merge --ff-only
+  rpull = pull -r
   pullff = pull --ff-only
   noff = merge --no-ff
   l = "!source ~/.githelpers && pretty_git_log"
