--- a/git/config
+++ b/git/config
@@ -2,36 +2,25 @@
   name = Colby Rabideau
   email = idontknow5691@gmail.com
 [core]
-  excludesfile = /Users/colby/.gitignore_global
+  excludesfile = ~/.gitignore_global
+  include = ~/.git_profile
 [color]
   ui = auto
 [alias]
-  st = status
+  aa = add --all
+  amend = !git commit --amend -m "$(git --no-pager log -1 --pretty=%s)"
+  b = branch
+  bo = checkout -b
   ci = commit
   co = checkout
+  df = !git --no-pager diff --name-only
   di = diff
-  dc = diff --cached
-  amend = commit --amend
-  aa = add --all
-  head = !git l -1
-  h = !git head
-  r = !git l -20
-  ra = !git r --all
-  ff = merge --ff-only
-  rpull = pull -r
-  pullff = pull --ff-only
-  noff = merge --no-ff
-  l = "!source ~/.githelpers && pretty_git_log"
-  la = !git l --all
-  lod = log --oneline --decorate
-  div = divergence
-  gn = goodness
-  gnc = goodness --cached
-  fa = fetch --all
-  pom = push origin master
-  b = branch
-  ds = diff --stat=160,120
-  dh1 = diff HEAD~1
+  dh = diff HEAD
+  dm = diff master
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
+  rbm = rebase master
+  rpull = pull -r
+  rs = !git --no-pager diff --name-only $1 | xargs -o vim -O
+  st = status -s
 [push]
   default = current
