updates and such

--- a/git/config
+++ b/git/config
@@ -32,3 +32,7 @@
 
 [include]
   path = ~/.git_profile
+[filter "hawser"]
+	clean = git hawser clean %f
+	smudge = git hawser smudge %f
+	required = true
