--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -542,11 +542,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>1235 110 445 103 0 0 1680 1027 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>738 958 606 456 0 0 2560 1417 </string>
+	<string>-1010 1122 606 456 -1080 -315 1080 1897 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>-850 648 620 392 -1080 -480 1080 1897 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>171 22 730 855 0 0 1680 1027 </string>
+	<string>0 22 730 855 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>8 517 730 854 0 0 2560 1440 </string>
+	<string>3 16 730 855 0 0 1440 900 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>1280 31 1277 1381 0 0 2560 1418 </string>
 	<key>New Bookmarks</key>
@@ -2002,10 +2004,16 @@
 			<string>/Users/colby</string>
 		</dict>
 	</array>
+	<key>NoSyncConfirmBeta</key>
+	<true/>
 	<key>NoSyncHaveShownPromoWithId_4</key>
 	<true/>
+	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
+	<true/>
+	<key>NoSyncInstallationId</key>
+	<string>E52A2AF2-D4EB-42D3-A9A0-56471CC7B047</string>
 	<key>NoSyncLastTipTime</key>
-	<real>480009664.77127802</real>
+	<real>480441052.72582501</real>
 	<key>NoSyncPermissionToShowTip</key>
 	<true/>
 	<key>NoSyncSuppressAnnyoingBellOffer</key>
@@ -2016,6 +2024,8 @@
 	<real>477849741.87876898</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
 	<real>477849733.781811</real>
+	<key>NoSyncTipsDisabled</key>
+	<true/>
 	<key>NoSyncTipsToNotShow</key>
 	<array>
 		<string>000</string>
@@ -2034,6 +2044,8 @@
 		<string>0012</string>
 		<string>0013</string>
 		<string>0014</string>
+		<string>0015</string>
+		<string>0016</string>
 	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
@@ -2097,16 +2109,18 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/testing3.xml</string>
+	<string>https://iterm2.com/appcasts/testing.xml?shard=45</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2016-03-16T15:02:54Z</date>
+	<date>2016-12-16T19:09:56Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Selection Respects Soft Boundaries</key>
 	<true/>
 	<key>ShowBookmarkName</key>
+	<false/>
+	<key>ShowFullScreenTabBar</key>
 	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
@@ -2147,6 +2161,6 @@
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
 	<key>iTerm Version</key>
-	<string>2.9.20160206</string>
+	<string>3.0.13</string>
 </dict>
 </plist>
