--- a/git/config
+++ b/git/config
@@ -1,6 +1,9 @@
+[include]
+  path = ~/.git_profile
+
 [user]
   name = Colby Rabideau
-  email = idontknow5691@gmail.com
+  email = crabideau@hubspot.com
 
 [core]
   excludesfile = ~/.gitignore_global
@@ -34,16 +37,14 @@
 [push]
   default = current
 
-[include]
-  path = ~/.git_profile
 [filter "hawser"]
   clean = git hawser clean %f
   smudge = git hawser smudge %f
   required = true
 
 [filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
-	required = true
+  clean = git-lfs clean %f
+  smudge = git-lfs smudge %f
+  required = true
 [hub]
-	host = git.hubteam.com
+  host = git.hubteam.com
