--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -559,9 +559,9 @@
 	<key>NSWindow Frame ProfilesPanel</key>
 	<string>1117 487 735 382 0 0 2560 1417 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>3090 299 620 392 2560 -177 1680 1027 </string>
+	<string>970 768 620 392 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>2560 -41 745 891 2560 -177 1680 1027 </string>
+	<string>0 0 1680 1027 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -2144,8 +2144,10 @@
 	</array>
 	<key>NoSyncAllAppVersions</key>
 	<array>
-		<string>3.3.6</string>
+		<string>3.3.7beta4</string>
 		<string>3.3.7beta2</string>
+		<string>3.3.7beta3</string>
+		<string>3.3.6</string>
 	</array>
 	<key>NoSyncBFPRecents</key>
 	<array>
@@ -2161,7 +2163,7 @@
 	<key>NoSyncInstallationId</key>
 	<string>9E692A20-4D03-4077-B643-7EBA5B470549</string>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>9</integer>
+	<integer>19</integer>
 	<key>NoSyncNextAnnoyanceTime</key>
 	<real>594308697.93274903</real>
 	<key>NoSyncOnboardingWindowHasBeenShown</key>
@@ -2944,7 +2946,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-11-06T15:47:35Z</date>
+	<date>2019-11-13T18:54:38Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SUUpdateRelaunchingMarker</key>
@@ -2956,7 +2958,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowPaneTitles</key>
 	<true/>
 	<key>SmartPlacement</key>
@@ -3008,6 +3010,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.3.7beta2</string>
+	<string>3.3.7beta4</string>
 </dict>
 </plist>
