--- a/git/config
+++ b/git/config
@@ -41,9 +41,9 @@
   required = true
 
 [filter "lfs"]
-  clean = git-lfs clean %f
-  smudge = git-lfs smudge %f
+  clean = git-lfs clean -- %f
+  smudge = git-lfs smudge -- %f
   required = true
+  process = git-lfs filter-process
 [pull]
   rebase = true
-
