--- a/git/config
+++ b/git/config
@@ -9,7 +9,7 @@
   amend = !git commit --amend -m "$(git --no-pager log -1 --pretty=%s)"
   b = !git --no-pager branch
   bo = checkout -b
-  bh = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 10 | awk -F' ~ HEAD@{' '{printf(\"%s (%s)\\n\", $1, substr($2, 1, length($2)-1))}'
+  bh = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 20 | awk -F' ~ HEAD@{' '{printf(\"%s (%s)\\n\", $1, substr($2, 1, length($2)-1))}'
   ci = commit
   co = checkout
   common = merge-base HEAD master
@@ -21,7 +21,7 @@
   gf = !git --no-pager grep -l
   g = !exec git
   git = !exec git
-  gr = !git --no-pager grep
+  gr = !git --no-pager grep -n
   lg = log --graph --oneline --decorate --all
   lm = !git --no-pager log --decorate --oneline $(git common)^..
   mb = !git merge-base HEAD $1
