--- a/git/config
+++ b/git/config
@@ -12,11 +12,12 @@
   bh = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 20 | awk -F' ~ HEAD@{' '{printf(\"%s (%s)\\n\", $1, substr($2, 1, length($2)-1))}'
   ci = commit
   co = checkout
-  common = merge-base HEAD master
+  common = merge-base HEAD main
   df = !git --no-pager diff --name-only
+  dfm = !git --no-pager diff --name-only "$(git common)"
   di = diff
   dh = diff HEAD
-  dm = diff master
+  dm = !git diff "$(git common)"
   fush = push --force-with-lease
   gf = !git --no-pager grep -l
   g = !exec git
@@ -25,15 +26,15 @@
   lg = log --graph --oneline --decorate --all
   lm = !git --no-pager log --decorate --oneline $(git common)^..
   mb = !git merge-base HEAD $1
-  rbm = rebase master
+  rbm = rebase main
   remote = !git for-each-ref --format='%(upstream:short)' "$(git symbolic-ref -q HEAD)"
   rpull = pull -r
   rs = !git --no-pager diff --name-only $1 | xargs -o nvim -O
   sl = !git --no-pager log --graph --branches --decorate --oneline --boundary --author='Colby Rabideau' --topo-order --first-parent --simplify-by-decoration --pretty=format:%D%n
   st = status -s
-  update = !git add --all && git stash && git pull --rebase origin master && git stash pop
+  update = !git add --all && git stash && git pull --rebase origin main && git stash pop
 
-  # commands for repos that use "develop" instead of "master"
+  # commands for repos that use "develop" instead of "main"
   cd = merge-base HEAD develop
   dd = diff develop
   ld = !git --no-pager log --decorate --oneline $(git cd)^..
