--- a/starship.toml
+++ b/starship.toml
@@ -1,5 +1,7 @@
 "$schema" = "https://starship.rs/config-schema.json"
 
+add_newline = false
+
 format = "$directory$git_branch$git_status$character"
 
 [directory]
